feat: Add Gamification Program & rules & Announcement statistics collection - MEED-1275 - Meeds-io/MIPs#13 This change will add statistics for some CRUD operations of program, rule and announcement.